# flore_bot

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.bot  README.md  admin_chat_id.txt  docker-compose.yml  pyproject.toml  render.yaml
flore_bot/: bot.py  callbacks.py  handlers.py  logger.py  main.py  run_bot.py  storage.py
