[tool.poetry]
name = "flore-bot"
version = "0.1.0"
description = "Telegram bot for order notifications and status management"
authors = ["Artem"]
readme = "README.md"
packages = [{include = "flore_bot"}]

[tool.poetry.dependencies]
python = ">=3.11"
aiogram = "^3.20.0.post0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.flake8]
line-length = 119
